src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>The number of days a position has been (or was) open</description>
        <formula>IF( ISBLANK( Close_Date__c ) ,  TODAY() -   Open_Date__c  , Close_Date__c - Open_Date__c )</formula>
        <inlineHelpText>The number of days a position has been (or was) open</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requiremnet__c</fullName>
        <label>Educational Requiremnet</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Retail Operations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of
the job and its duties</description>
        <label>Job Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_level__c</fullName>
        <label>Job level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                </value>
                <value>
                    <fullName>FN-200</fullName>
                </value>
                <value>
                    <fullName>FN-300</fullName>
                </value>
                <value>
                    <fullName>FN-400</fullName>
                </value>
                <value>
                    <fullName>HR-100</fullName>
                </value>
                <value>
                    <fullName>HR-200</fullName>
                </value>
                <value>
                    <fullName>HR-300</fullName>
                </value>
                <value>
                    <fullName>HR-400</fullName>
                </value>
                <value>
                    <fullName>IT-100</fullName>
                </value>
                <value>
                    <fullName>IT-200</fullName>
                </value>
                <value>
                    <fullName>IT-300</fullName>
                </value>
                <value>
                    <fullName>IT-400</fullName>
                </value>
                <value>
                    <fullName>MC-100</fullName>
                </value>
                <value>
                    <fullName>MC-200</fullName>
                </value>
                <value>
                    <fullName>MC-300</fullName>
                </value>
                <value>
                    <fullName>MC-400</fullName>
                </value>
                <value>
                    <fullName>RO-100</fullName>
                </value>
                <value>
                    <fullName>RO-200</fullName>
                </value>
                <value>
                    <fullName>RO-300</fullName>
                </value>
                <value>
                    <fullName>RO-400</fullName>
                </value>
                <value>
                    <fullName>WH-100</fullName>
                </value>
                <value>
                    <fullName>WH-200</fullName>
                </value>
                <value>
                    <fullName>WH-300</fullName>
                </value>
                <value>
                    <fullName>WH-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                    <default>true</default>
                    <label>San Francisco, CA</label>
                </value>
                <value>
                    <fullName>Austin, TX</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>London, England</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>13072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                    <label>New Position</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Open - Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - Not Approved</fullName>
                </value>
                <value>
                    <fullName>Closed - Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contarctor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Close Date must be specified when Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved.&apos;</description>
        <errorConditionFormula>ISBLANK( Close_Date__c ) &amp;&amp; (ISPICKVAL(Status__c , &quot;Closed - Filled&quot;) || ISPICKVAL(Status__c , &quot;Closed - Not Approved&quot;) )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified when
Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min pay should never exceed Max pay</description>
        <errorConditionFormula>Min_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
</CustomObject>